[metadata]
name = specky
version = 0.1.5
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Audio file spectral analysis
url = https://github.com/nschloe/specky
project_urls =
    Code=https://github.com/nschloe/specky
    Issues=https://github.com/nschloe/specky/issues
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
packages = find:
install_requires =
    colorama
    importlib_metadata;python_version<"3.8"
    matplotlib
    mutagen
    numpy
    pydub
    scipy
python_requires = >=3.6

[options.extras_require]
all = matplotlib
png = matplotlib

[options.entry_points]
console_scripts =
    specky-check = specky.cli:check
    specky-show = specky.cli:show
